@@ -91,6 +91,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   If not specified it will default to $wgScriptPath/extensions
 * Added $wgCountTotalSearchHits to make search UI display total number of hits
   with some search engines.
+* Added $wgAdvertisedFeedTypes to decide what feed types (RSS, Atom, both, or
+  neither) MediaWiki advertises.  Default is array( 'rss' ), so Atom is no
+  longer advertised by default (but it still works).
 
 
 === New features in 1.16 ===
